# XIV

./: .gitignore  .npmignore  CHANGELOG.md  README.md  cli.js  cli.ts  compiler.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: compile-docs.yml  npm-publish-github-packages.yml  publish.yml  publish_npm.yaml  python-publish.yml  test.yml
demo/: index.html  main.xiv  style.css
docs/: index.html  main.xiv  node_test.html  style.css
docs/templates/: my-card.xiv  panel.xiv
src/: compiler.py  compiler.ts  main.py
src/runtime/: xiv.js
src/runtime/modules/: directives.js  dom.js  evaluate.js  reactivity.js
tests/: compiler.test.ts  test_compiler.py
tests/test_temp/: main1.xiv  main2.xiv
xiv_compiler/: main.py
